--- a/index.ipynb
+++ b/index.ipynb
@@ -247,7 +247,7 @@
     }
    ],
    "source": [
-    "\"art.vandelay@vandelay.co\"ends_with('com') # False"
+    "\"art.vandelay@vandelay.co\"endswith('com') # False"
    ]
   },
   {
