--- a/index.ipynb
+++ b/index.ipynb
@@ -297,7 +297,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -323,7 +323,7 @@
    },
    "outputs": [],
    "source": [
-    "\"7285553334\" # 7285553336"
+    "int(\"7285553334\" # 7285553336"
    ]
   },
   {
